<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PatientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_weight="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/welcome"
            android:textColor="@color/buttonInverseText"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logo"
            android:layout_weight="1"
            android:contentDescription="TODO" />

        <Button
            android:id="@+id/viewProblemsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/buttonInverseText"
            android:textColorHint="@color/hintForeground"
            android:textSize="18sp"
            android:background="@drawable/button_border_inverse"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/view_problems" />


        <Button
            android:id="@+id/viewLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/buttonInverseText"
            android:background="@drawable/button_border_inverse"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/view_locations" />

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/buttonInverseText"
            android:textColorHint="@color/hintForeground"
            android:background="@drawable/button_border_inverse"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/view_edit_profile"/>

        <Button
            android:id="@+id/uploadBodyLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/buttonInverseText"
            android:textColorHint="@color/hintForeground"
            android:background="@drawable/button_border_inverse"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/upload_body_location" />



    </LinearLayout>



    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />
</android.support.constraint.ConstraintLayout>