...
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:text="LOGIN AS A CARE PROVIDER"
                    android:textColor="@color/drawableWhite" />

                <Button
                    android:id="@+id/patient_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
...
